CFLAGS += -O0 -g
CXXFLAGS += -O0 -g

noinst_LTLIBRARIES = libquickfixcpptest.la

libquickfixcpptest_la_SOURCES = \
	DictionaryTestCase.cpp \
	FieldBaseTestCase.cpp \
	FieldConvertorsTestCase.cpp \
    FieldMapTestCase.cpp \
    FieldTypesTestCase.cpp \
	FileLogTestCase.cpp \
	FileStoreFactoryTestCase.cpp \
	FileStoreTestCase.cpp \
	FileUtilitiesTestCase.cpp \
	HttpMessageTestCase.cpp \
	HttpParserTestCase.cpp \
	MemoryStoreTestCase.cpp \
	MemoryStoreTestCase.h \
	MessageSortersTestCase.cpp \
	MessagesTestCase.cpp \
	GroupTestCase.cpp \
	MySQLStoreTestCase.cpp \
	MySQLStoreTestCase.h \
	NullStoreTestCase.cpp \
	OdbcStoreTestCase.cpp \
	ParserTestCase.cpp \
	PostgreSQLStoreTestCase.cpp \
	SessionIDTestCase.cpp \
	SessionSettingsTestCase.cpp \
	SessionTestCase.cpp \
	SessionFactoryTestCase.cpp \
	SettingsTestCase.cpp \
	SocketAcceptorTestCase.cpp \
	SocketConnectorTestCase.cpp \
	SocketServerTestCase.cpp \
	StringUtilitiesTestCase.cpp \
	TestHelper.cpp \
	TimeRangeTestCase.cpp \
	UtcTimeOnlyTestCase.cpp \
	UtcTimeStampTestCase.cpp

INCLUDES = -I.. -I../../../UnitTest++/src
