noinst_LTLIBRARIES = libquickfixcpptest.la

libquickfixcpptest_la_SOURCES = \
    DataDictionaryProviderTestCase.cpp \
    DataDictionaryTestCase.cpp \
    DictionaryTestCase.cpp \
    FieldBaseTestCase.cpp \
    FieldConvertorsTestCase.cpp \
    FieldMapTestCase.cpp \
    FieldTypesTestCase.cpp \
    FileLogTestCase.cpp \
    FileStoreFactoryTestCase.cpp \
    FileStoreTestCase.cpp \
    FileUtilitiesTestCase.cpp \
    HttpMessageTestCase.cpp \
    HttpParserTestCase.cpp \
    MemoryStoreTestCase.cpp \
    MessageSortersTestCase.cpp \
    MessagesTestCase.cpp \
    GroupTestCase.cpp \
    MySQLStoreTestCase.cpp \
    NullStoreTestCase.cpp \
    OdbcStoreTestCase.cpp \
    ParserTestCase.cpp \
    PostgreSQLStoreTestCase.cpp \
    SessionIDTestCase.cpp \
    SessionSettingsTestCase.cpp \
    SessionStateTestCase.cpp \
    SessionTestCase.cpp \
    SessionFactoryTestCase.cpp \
    SettingsTestCase.cpp \
    SharedArrayTestCase.cpp \
    SocketAcceptorTestCase.cpp \
    SocketConnectionTestCase.cpp \
    SocketConnectorTestCase.cpp \
    SocketMonitorTestCase.cpp \
    SocketServerTestCase.cpp \
    StringUtilitiesTestCase.cpp \
    TestHelper.cpp \
    TimeRangeTestCase.cpp \
    UtcTimeOnlyTestCase.cpp \
    UtcTimeStampTestCase.cpp \
    UtilityTestCase.cpp
	

INCLUDES = -I.. -I../../../googletest
