noinst_PROGRAMS = ut

ut_LDADD = ../libquickfix.la

ut_SOURCES = \
	ut.cpp \
	catch_amalgamated.cpp \
	catch_amalgamated.h \
	DataDictionaryProviderTestCase.cpp \
	DataDictionaryTestCase.cpp \
	DictionaryTestCase.cpp \
	FieldBaseTestCase.cpp \
	FieldConvertorsTestCase.cpp \
	FieldMapTestCase.cpp \
	FieldTypesTestCase.cpp \
	FileLogTestCase.cpp \
	FileStoreFactoryTestCase.cpp \
	FileStoreTestCase.cpp \
	FileUtilitiesTestCase.cpp \
	GroupTestCase.cpp \
	HttpMessageTestCase.cpp \
	HttpParserTestCase.cpp \
	MemoryStoreTestCase.cpp \
	MessageSortersTestCase.cpp \
	MessagesTestCase.cpp \
	MessageStoreTestCase.h \
	MySQLStoreTestCase.cpp \
	NullStoreTestCase.cpp \
	OdbcStoreTestCase.cpp \
	ParserTestCase.cpp \
	PostgreSQLStoreTestCase.cpp \
	SessionFactoryTestCase.cpp \
	SessionIDTestCase.cpp \
	SessionSettingsTestCase.cpp \
	SessionStateTestCase.cpp \
	SessionTestCase.cpp \
	SettingsTestCase.cpp \
	SharedArrayTestCase.cpp \
	SocketAcceptorTestCase.cpp \
	SocketConnectionTestCase.cpp \
	SocketConnectorTestCase.cpp \
	SocketMonitorTestCase.cpp \
	SocketServerTestCase.cpp \
	StringUtilitiesTestCase.cpp \
	TestHelper.cpp \
	TestHelper.h \
	TimeRangeTestCase.cpp \
	UtcTimeOnlyTestCase.cpp \
	UtcTimeStampTestCase.cpp \
	UtilityTestCase.cpp
	
AM_CPPFLAGS = -DCATCH_AMALGAMATED_CUSTOM_MAIN -I..